--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
 		"noEmit": true,
 		"jsx": "react-jsx",
 		"typeRoots": [
-			"./src/types/types.ts"
+			"src/types/global.types.ts"
 		]
 	},
 	"include": [
